# ChangeLog for sys-libs/slang
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.65 2008/02/09 05:38:40 drac Exp $

*slang-2.1.3 (09 Feb 2008)

  09 Feb 2008; Samuli Suominen <drac@gentoo.org> +slang-2.1.3.ebuild:
  Version bump wrt #202344, thanks to Arfrever Frehtes Taifersar Arahesis for
  reporting.

  16 Nov 2007; Ferris McCormick <fmccor@gentoo.org> slang-2.1.2.ebuild:
  Add ~sparc for testing.  Why is this still package.masked?

  14 Oct 2007; <matsuu@gentoo.org> -files/slang-2.0.6-foreground.patch,
  -files/slang-2.0.6-slsh-libs.patch, -slang-1.4.9-r1.ebuild,
  slang-1.4.9-r2.ebuild, -slang-2.0.6.ebuild:
  Removed old versions.
  Fixed distcc issue, bug #194233.

*slang-2.1.2 (18 Sep 2007)

  18 Sep 2007; MATSUU Takuto <matsuu@gentoo.org>
  +files/slang-2.1.2-slsh-libs.patch, +slang-2.1.2.ebuild:
  Version bumped, bug #182339.

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing liquidx from metadata due to his retirement (see #171155 for
  reference).

  18 Mar 2007; Fabian Groffen <grobian@gentoo.org> slang-1.4.9-r1.ebuild,
  slang-1.4.9-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  12 Mar 2007; Javier Villavicencio <the_paya@gentoo.org>
  slang-1.4.9-r2.ebuild:
  Added userland_BSD to the conditionals for fsuid.patch. Thanks goes to 
  Sergey Belyashov in bug 169670.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> slang-1.4.9-r2.ebuild:
  Added ~sparc-fbsd keyword.

  19 Sep 2006; Alastair Tse <liquidx@gentoo.org> slang-2.0.6.ebuild:
  add -j1 to src_compile emakes (#141990)

  28 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> slang-1.4.9-r2.ebuild:
  Stable on hppa

  09 Aug 2006; Alastair Tse <liquidx@gentoo.org> slang-2.0.6.ebuild:
  mark for ~x86

  29 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/slang-2.0.6-foreground.patch, +files/slang-2.0.6-slsh-libs.patch,
  slang-2.0.6.ebuild: