@@ -2,10 +2,8 @@ AUX slang-1.4.9-fbsdlink.patch 932 RMD160 d23685d7011959bbee70328bc35d21e4f45727
 AUX slang-2.1.2-slsh-libs.patch 637 RMD160 0c8b60cf026ab7fc5ad079f04766b907325ed4df SHA1 fd1a58367e2d94f55154d66fedfe69fe921cb794 SHA256 fe5e969a51b6de0874c6b903dcf0ad21f6d5b27813e0e4c79a4dc929ab737ea8
 DIST slang-1.4.9-patches.tar.gz 12132 RMD160 02c7df8f7d51c39c0bf9e729606aa1b94c3e6aaf SHA1 e8cce42f2e7159cbe21ae6cf184ee771ec0a5161 SHA256 487174a2b5df8564b99589e789319b37ee75c52d09ce98bfb12656414cdca3fb
 DIST slang-1.4.9.tar.bz2 631079 RMD160 bd2c37554129134e4e874502af0ebcb6fc7e151b SHA1 667709eb1bc1b0f68ce36b31204bf8a99d31eefa SHA256 fa42e57e902f2161dc2b297e0dcb24ca180024770afa379027db582803ffa2fa
-DIST slang-2.1.2.tar.gz 1474249 RMD160 f275ad760ef53b83d7de77db0c9066bb7ff15dcb SHA1 78d110ecd2a160a564390ea82c3aedc7b5d41f06 SHA256 9b5d22c23af0cb79132e2bfdbc1e39ab4c8bdbc5da32c4b3201d9c473b0ec5f5
 DIST slang-2.1.3.tar.bz2 1191425 RMD160 b59424972e52c361a15b23874d1a0539683608e5 SHA1 31fc6162684f69d9dd0377372dfdc336f0c4343a SHA256 534b80d31f582a00163c2abdcc0317585fa06918c96af65d008718f3b68fddfc
-EBUILD slang-1.4.9-r2.ebuild 1965 RMD160 9182a6af0926a2d80a02aea8b0bc55ed7d53f774 SHA1 9d41277bed4db2b87b0f226ceda994bf92041a87 SHA256 8f33d4656d771a99a447b916d257b785e1fc56588dd86f336062d747baad5a8c
-EBUILD slang-2.1.2.ebuild 1883 RMD160 e113024689428eaf3bc4ea0b4603edf2e43df70b SHA1 6c4e0c69064295c2c4a7c7c924d1f13e0eff0a2e SHA256 07a5c36af99add02832116890409f634747bdffcffdf303c14ce58d87d617cd6
+EBUILD slang-1.4.9-r2.ebuild 1985 RMD160 7ec07161893923053a1eb44f4ad4241ef974ad87 SHA1 3a5b81aa30d36b05089cfd30e196e8297fad3cc1 SHA256 121ddf17f0d41542a1a418d360a7818931f126f22af52393cead0728d3d80bef
 EBUILD slang-2.1.3.ebuild 1171 RMD160 66f2b877d2693a37d87acf9c139b72f728af73cd SHA1 b474869d2fd765465552deb5e38f463a1739f69a SHA256 c92632fd8214104dedaefb94fef654b24904aadcbebd9102d7c6ff9f584d0340
-MISC ChangeLog 9120 RMD160 c18824646cd48849cfb859dad7e02924822b2eea SHA1 d087c609a8e42a8efed8532bb00f180c67aee7f6 SHA256 72db6758c9fc16ef844fcc014cd7d70e1f2fd4461960fc26bdfdfc6272f466a1
+MISC ChangeLog 9267 RMD160 f2c461dcaf7e51e9260e6c8e588a980bddd097ba SHA1 17fbc59175e3c3541be6833bc3f036211bc4c190 SHA256 5834b5f709427b903a576292b35dfd52b13c641e96436c7fd6f7f6e07f6506d6
 MISC metadata.xml 157 RMD160 1305e8c09c6d49c0db2a18bb50b045460c124ebe SHA1 874689ae30dfe223d487e0e6a5e0a0dbf06a69f4 SHA256 c3c089740b31ec0f4d7fbc3bf2d6bb8460ccfd0694f01bf91b22a2e1930d6d5d
