@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/slang
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.65 2008/02/09 05:38:40 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.66 2008/02/09 06:38:09 drac Exp $
+
+  09 Feb 2008; Samuli Suominen <drac@gentoo.org> slang-1.4.9-r2.ebuild,
+  -slang-2.1.2.ebuild:
+  Remove unused version and fix quoting of stable.
 
 *slang-2.1.3 (09 Feb 2008)
 
